--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ header ul li {
   width: 75%;
   margin: auto;
 }
-.neme {
+.name {
   display: none;
 }
 .line-1 {
@@ -254,6 +254,4 @@ footer {
   flex-wrap: wrap;
   align-items: center;
   gap: 10px;
-}
-.burger {
 }
