--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,4 @@
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   header nav {
     display: none;
   }
@@ -142,5 +142,12 @@
   }
   .first p {
     margin-top: 39px;
+  }
+  .burger {
+    display: flex;
+    max-width: 60px;
+    width: 100%;
+    margin: auto;
+    margin-top: 30px;
   }
 }
